Bug 400544 - nsINavHistoryService::addVisit should take a uri for the referrer, not a place id.  r=mano, a=beltzner.