toolkit/components/places/tests/unit/test_nsINavHistoryViewer.js
@@ -56,7 +56,7 @@ function add_visit(aURI, aDate) {
   var date = aDate || Date.now();
   var placeID = histsvc.addVisit(aURI,
                                  date,
-                                 0, // no referrer
+                                 null, // no referrer
                                  histsvc.TRANSITION_TYPED, // user typed in URL bar
                                  false, // not redirect
                                  0);
